# bet-maker

./: .env.sample  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
_compose/app/: Dockerfile
_compose/db/: Dockerfile
alembic/: env.py
alembic/versions/: e0d38731af25_.py  e4fb904410aa_.py
migrations/: env.py
migrations/versions/: 34b5b1d7533b_init.py
src/: config.py  database.py
src/events/: enums.py  models.py  routers.py  services.py
src/events/serializers/: __init__.py  validators.py
src/extensions/: dependencies.py  models.py  validators.py
src/predictions/: enums.py  models.py  routers.py  services.py
src/predictions/serializers/: __init__.py
