[tool.poetry]
name = "betsoftware"
version = "0.1.0"
description = ""
authors = ["Anatoly <anatolyfeteleu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"
uvicorn = "^0.29.0"
pydantic = {extras = ["dotenv"], version = "^2.1.1"}
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
